--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <title>FFmpeg Developer Manual</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
     CONTENT
