--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-<h1>Writing a codec for <code>libavcodec</code></h1>
+<h1>DRAFT: Writing a codec for <code>libavcodec</code></h1>
 
 <h3><em>Anamitra Ghorui</em></h3>
 
@@ -92,7 +92,7 @@ user.</li>
 <li><code>dts</code> <strong>- Decode Timestamp:</strong> Time at which </li>
 </ol>
 
-<h2>Distinction between formats and encoded audio/video data</h2>
+<h2>Distinction Between Container Formats and Encoded Audio/Video Data</h2>
 
 <blockquote>
   <h3>Note for Developers with a Background in Object Oriented Languages</h3>
