--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h2 id="foreword">Foreword</h2>
 <p>This document is more or less a run down of my experience with making a codec for <a href="https://ffmpeg.org">FFmpeg</a> with the intent of letting future developers have a slightly easier time of figuring out where things are.</p>
 <p>During my time with FFmpeg, I have only worked with developing a video codec up till now. Hence, my knowlegde is more or less limited to libavcodec, libavformat, and libavutil.</p>
-<p>If you have any suggestions, please shoot me an email at aghorui (at) teknik (dot) io or open an issue on <a href="https://github.com/daujerrine/ffmpeg-doc">github</a>.</p>
+<p>If you have any suggestions, please shoot me an email at aghorui (at) teknik (dot) io or open an issue on <a href="https://github.com/daujerrine/ffmpeg-doc">Github</a>.</p>
 <p>This document is under public domain.</p>
 <h2 id="introduction">Introduction</h2>
 <p>The FFmpeg suite is a program largely written in C. It’s code base is extremely large consisting of countless codecs, filters, formats, display/audio facilities, etc.</p>
@@ -70,5 +70,6 @@
 <p>C does not have classes and similar provisions in the language, however, a very similar method of programming is observable over here in the form of <em>context</em> structs and functions. Storage structs are used to handle repetitive patterns such as for a set of decoder functions, parameters etc.</p>
 <p><img src="images/classes_and_c.svg" alt="image" /></p>
 </blockquote>
+<p><span>9</span> ABCDEF</p>
 </body>
 </html>
